--- a/index.html
+++ b/index.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Hotline</title>
     <!-- Font Link -->
-     
+
     <!-- Tailwind Css Cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Font Awesome Cdn -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <!-- navbar -->
+    <nav class="w-[1280px] mx-auto flex justify-between items-center py-3">
+      <div class="flex items-center gap-2">
+        <img src="./assets/logo.png" alt="" class="w-14" />
+        <h1 class="font-extrabold text-2xl text-[#006747]">
+          Emergency <br />
+          Service
+        </h1>
+      </div>
+      <div class="flex items-center gap-5">
+        <div
+          id="heartIcon"
+          class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+        >
+          <span class="font-semibold">0</span>
+          <img src="./assets/heart.png" alt="" class="w-7" />
+        </div>
+        <div
+          id="coinIcon"
+          class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+        >
+          <span class="font-semibold">80</span>
+          <img src="./assets/coin.png" alt="" class="w-7" />
+        </div>
+        <div
+          id="totalCopy"
+          class="bg-green-500 text-white w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+        >
+          <span>0</span>
+          <span class="flex items-center">copy</span>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Banner Section -->
+    <div
+      id="banner-section"
+      class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-7"
+    >
+      <div class="w-[1280px] mx-auto">
+        <div class="flex justify-center mb-2">
+          <img src="./assets/logo-dark.png" alt="" class="w-24" />
+        </div>
+        <div class="text-white space-y-5">
+          <h1 class="text-3xl font-bold">Emergency Service Directory</h1>
+          <p class="text-2xl">
+            Government Emergency Services at Your Fingertip – A Project by
+            Government of the People’s Republic of Bangladesh
+          </p>
+        </div>
+      </div>
+    </div>
+
     <script src="./Js/script.js"></script>
-</body>
+  </body>
 </html>
