--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Hotline</title>
-    <!-- Font Link -->
-
+    <!-- Daisy Ui Cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <!-- Tailwind Css Cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Font Awesome Cdn -->
@@ -27,7 +27,7 @@
           Service
         </h1>
       </div>
-      <div class="flex items-center gap-5">
+      <div class="flex items-center gap-5 text-lg">
         <div
           id="heartIcon"
           class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
@@ -39,15 +39,15 @@
           id="coinIcon"
           class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
         >
-          <span class="font-semibold">80</span>
+          <span class="font-semibold">100</span>
           <img src="./assets/coin.png" alt="" class="w-7" />
         </div>
         <div
           id="totalCopy"
-          class="bg-green-500 text-white w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+          class="bg-green-500 text-white w-24 h-7 rounded-3xl flex items-center justify-center gap-2 py-5 font-semibold"
         >
-          <span>0</span>
-          <span class="flex items-center">copy</span>
+          <span class="flex items-center">0</span>
+          <div class="flex justify-center items-center"><p>Copy</p></div>
         </div>
       </div>
     </nav>
@@ -69,6 +69,54 @@
           </p>
         </div>
       </div>
+    </div>
+
+    <!-- Service card section -->
+    <div class="service-body bg-[#f5fff6] min-h-screen">
+      <section class="main-container w-[1280px] mx-auto grid grid-cols-12 mt-14">
+        <div id="all-card-box" class="col-span-9 ">
+          <div class="grid grid-cols-3">
+            <!-- card 01- National emergency  -->
+            <div id="card-01" class=" bg-white shadow-md p-5 rounded-lg">
+              <div class="card-content">
+                <div id="icon" class="flex justify-between items-center">
+                  <div class="bg-red-200 p-2 rounded-lg">
+                    <img class="w-10" src="./assets/emergency.png " alt="" />
+                  </div>
+                  <div>
+                    <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
+                  </div>
+                </div>
+                <div id="title" class="my-2">
+                  <h1 class="text-lg font-bold">National Emergency Number</h1>
+                  <p class="text-[#5c5c5c] text-base">National Emergency</p>
+                </div>
+                <div id="number" class="my-2 space-y-1">
+                  <h1 class="text-2xl font-bold">999</h1>
+                  <p
+                    class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
+                  >
+                    All
+                  </p>
+                </div>
+        
+                <div id="buttton" class="flex justify-between w-full gap-3 mt-4">
+                  <button class="btn btn-soft w-[45%] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>copy</button>
+                    <button class="btn btn-soft btn-success w-[45%] bg-green-600 border-none text-white">
+                        <i class="fa-solid fa-phone"></i>Call</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- call history -->
+        <div id="call-history-box" class="col-span-3 bg-white p-5 shadow-md rounded-lg">
+            <div class="flex justify-between items-center">
+                <h1 class="font-medium text-lg flex gap-2"><span><i class="fa-regular fa-clock text-[#b9b4b4]"></i></span><span>Call History</span></h1>
+                <button class="bg-green-600 rounded-full w-28 py-2 text-white text-lg font-semibold ">Clear</button>
+            </div>
+        </div>
+      </section>
     </div>
 
     <script src="./Js/script.js"></script>
