--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           id="coinIcon"
           class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
         >
-          <span class="font-semibold">100</span>
+          <span id="coinBox" class="font-semibold">100</span>
           <img src="./assets/coin.png" alt="" class="w-7" />
         </div>
         <div
