--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="w-[1440px] mx-auto flex justify-between items-center py-3">
+    <nav class="max-w-[1440px] mx-auto flex justify-between items-center py-3">
       <div class="flex items-center gap-2">
         <img src="./assets/logo.png" alt="" class="w-14" />
         <h1 class="font-extrabold text-2xl text-[#006747]">
@@ -60,7 +60,7 @@
       id="banner-section"
       class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-7 w-full"
     >
-      <div class="w-[1280px] mx-auto">
+      <div class="max-w-[1440px] mx-auto">
         <div class="flex justify-center mb-2">
           <img src="./assets/logo-dark.png" alt="" class="w-24" />
         </div>
@@ -77,7 +77,7 @@
     <!-- Service card section -->
     <div class="service-body bg-[#f5fff6] min-h-screen">
       <section
-        class="main-container w-[1440px] mx-auto grid grid-cols-12 mt-14"
+        class="main-container max-w-[1440px] mx-auto grid grid-cols-12 pt-10"
       >
         <div id="all-card-box" class="col-span-9">
           <div class="grid grid-cols-3">
@@ -97,7 +97,7 @@
                   <p class="text-[#5c5c5c] text-base">National Emergency</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 class="text-2xl font-bold">999</h1>
+                  <h1 id="serviceContact" class="text-2xl font-bold">999</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -108,7 +108,7 @@
                 <div
                   id="buttton"
                   class="flex justify-between w-full gap-3 mt-4"
-                >
+                 >
                   <button
                     id="copyBtn"
                     class="btn btn-soft w-[45%] text-[#5c5c5c]"
