--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="max-w-[1440px] mx-auto flex justify-between items-center py-3">
+    <nav class="max-w-[1440px] mx-auto flex flex-col space-y-5 md:space-y-0 md:flex-row justify-between items-center py-3">
       <div class="flex items-center gap-2">
         <img src="./assets/logo.png" alt="" class="w-14" />
         <h1 class="font-extrabold text-2xl text-[#006747]">
@@ -31,23 +31,23 @@
           Service
         </h1>
       </div>
-      <div class="flex items-center gap-5 text-lg">
+      <div class="flex items-center justify-between gap-5 text-lg">
         <div
-          class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+          class="bg-[#e7f5e8] w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
         >
           <span id="heartIconCount" class="font-semibold">0</span>
           <img src="./assets/heart.png" alt="" class="w-7" />
         </div>
         <div
           id="coinIcon"
-          class="bg-slate-100 w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
+          class="bg-[#e7f5e8] w-24 h-7 rounded-3xl flex items-center justify-center gap-3 py-5"
         >
           <span id="coinBox" class="font-semibold">100</span>
           <img src="./assets/coin.png" alt="" class="w-7" />
         </div>
         <div
           id="totalCopy"
-          class="bg-green-500 text-white w-24 h-7 rounded-3xl flex items-center justify-center gap-2 py-5 font-semibold"
+          class="bg-green-500 text-white w-24 h-7 cursor-pointer rounded-3xl flex items-center justify-center gap-2 py-5 font-semibold"
         >
           <span id="copyCounter" class="flex items-center">0</span>
           <div class="flex justify-center items-center"><p>Copy</p></div>
@@ -58,15 +58,15 @@
     <!-- Banner Section -->
     <div
       id="banner-section"
-      class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-7 w-full"
+      class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-8 w-full"
     >
       <div class="max-w-[1440px] mx-auto">
         <div class="flex justify-center mb-2">
           <img src="./assets/logo-dark.png" alt="" class="w-24" />
         </div>
-        <div class="text-white space-y-5">
-          <h1 class="text-3xl font-bold">Emergency Service Directory</h1>
-          <p class="text-2xl">
+        <div class="text-white space-y-2 md:space-y-5">
+          <h1 class="text-xl md:text-3xl font-bold">Emergency Service Directory</h1>
+          <p class="text-base w-[90%] mx-auto md:text-2xl">
             Government Emergency Services at Your Fingertip – A Project by
             Government of the People’s Republic of Bangladesh
           </p>
@@ -77,10 +77,10 @@
     <!-- Service card section -->
     <div class="service-body bg-[#f5fff6] min-h-screen">
       <section
-        class="main-container max-w-[1440px] mx-auto grid grid-cols-12 pt-10"
+        class="main-container max-w-[1440px] mx-auto md:grid md:grid-cols-12 gap-10 pt-10"
       >
-        <div id="all-card-box" class="col-span-9">
-          <div class="grid grid-cols-3">
+        <div id="all-card-box" class="md:col-span-9">
+          <div class="grid grid-cols-2 gap-3 md:gap-5 w-[95%] md:w-full mx-auto md:grid-cols-3">
             <!-- card 01- National emergency  -->
             <div id="card-01" class="bg-white shadow-md p-5 rounded-lg">
               <div class="card-content">
@@ -93,7 +93,7 @@
                   </div>
                 </div>
                 <div id="title" class="my-2">
-                  <h1 class="text-lg font-bold">National Emergency Number</h1>
+                  <h1 class="text-lg font-bold">National Emergency Service</h1>
                   <p class="text-[#5c5c5c] text-base">National Emergency</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
@@ -111,24 +111,29 @@
                 >
                   <button
                     id="copyBtn"
-                    class="btn btn-soft w-[45%] text-[#5c5c5c]"
+                    class="btn btn-soft w-[45%] text-[#5c5c5c] hover:bg-black hover:text-white rounded-lg shadow-md"
                   >
                     <i class="fa-regular fa-copy"></i>copy
                   </button>
                   <button
-                    class="call-button btn btn-soft btn-success w-[45%] bg-green-600 border-none text-white"
+                    class="call-button btn btn-soft btn-success w-[45%] hover:bg-[#bbb6b6] bg-green-600 border-none text-white rounded-lg shadow-md"
                   >
                     <i class="fa-solid fa-phone"></i>Call
                   </button>
                 </div>
               </div>
             </div>
+            <!-- card 02  -->
+             
+            <!-- card 03 -->
+            
+
           </div>
         </div>
         <!-- call history -->
         <div
           id="call-history"
-          class="col-span-3 bg-white p-5 shadow-md rounded-lg"
+          class="w-[95%] md:w-full mx-auto mt-5 md:mt-0 md:col-span-3 bg-white p-5 shadow-md rounded-lg"
         >
           <div class="flex justify-between items-center">
             <h1 class="font-semibold text-lg flex gap-2">
@@ -136,7 +141,7 @@
               ><span>Call History</span>
             </h1>
             <button id="clear-history"
-              class="bg-green-600 rounded-full w-28 py-2 text-white text-lg font-semibold"
+              class="bg-green-600 rounded-full w-28 py-2 text-white text-lg font-semibold hover:bg-[#bbb6b6]"
             >
               Clear
             </button>
