--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/emergency.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
                   <p class="text-[#5c5c5c] text-base">National Emergency</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">999</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">999</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -130,7 +130,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/police.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -139,7 +139,7 @@
                   <p class="text-[#5c5c5c] text-base">Police</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">999</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">999</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -172,7 +172,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/fire-service.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -181,7 +181,7 @@
                   <p class="text-[#5c5c5c] text-base">Fire Service </p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">999</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">999</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -214,7 +214,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/ambulance.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -223,7 +223,7 @@
                   <p class="text-[#5c5c5c] text-base">Ambulance</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">1994-999999</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">1994-999999</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -256,7 +256,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/emergency.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -265,7 +265,7 @@
                   <p class="text-[#5c5c5c] text-base">Women & Child Helpline</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">109</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">109</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -298,7 +298,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/emergency.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -307,7 +307,7 @@
                   <p class="text-[#5c5c5c] text-base">Anti-Corruption</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">106</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">106</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -340,7 +340,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/ambulance.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -349,7 +349,7 @@
                   <p class="text-[#5c5c5c] text-base">Electricity outage</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">16216</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">16216</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -382,7 +382,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/brac.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -391,7 +391,7 @@
                   <p class="text-[#5c5c5c] text-base">Brac</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">16445</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">16445</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
@@ -424,7 +424,7 @@
                   <div class="bg-red-200 p-2 rounded-lg">
                     <img class="w-8" src="./assets/Bangladesh-Railway.png " alt="" />
                   </div>
-                  <div id="heartIcon">
+                  <div id="heartIcon" class="heartIcon">
                     <i class="fa-regular fa-heart text-3xl text-[#5c5c5c]"></i>
                   </div>
                 </div>
@@ -433,7 +433,7 @@
                   <p class="text-[#5c5c5c] text-base">Bangladesh Railway</p>
                 </div>
                 <div id="number" class="my-2 space-y-1">
-                  <h1 id="serviceContact" class="text-2xl font-bold">163</h1>
+                  <h1 id="servContact" class="serviceContact text-2xl font-bold">163</h1>
                   <p
                     class="text-[#5c5c5c] w-10 rounded-xl text-center bg-gray-100"
                   >
