--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Hotline</title>
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="./assets/emergency.png" type="image/x-icon">
     <!-- Daisy Ui Cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
@@ -75,11 +77,11 @@
     </div>
 
     <!-- Service card section -->
-    <div class="service-body bg-[#f5fff6] min-h-screen">
+    <div class="service-body bg-[#f5fff6]">
       <section
         class="main-container max-w-[1440px] mx-auto md:grid md:grid-cols-12 gap-10 pt-10"
       >
-        <div id="all-card-box" class="md:col-span-9">
+        <div id="all-card-box" class="md:col-span-9 pb-5">
           <div class="grid grid-cols-2 gap-3 md:gap-5 w-[95%] md:w-full mx-auto md:grid-cols-3">
             <!-- card 01- National emergency  -->
             <div id="card-01" class="bg-white shadow-md p-5 rounded-lg">
@@ -481,7 +483,7 @@
           </div>
 
           <!-- user seen section -->
-          <div id="call-history-box" class="mt-10">
+          <div id="call-history-box" class="mt-10 ">
             
           </div>
         </div>
